--- a/steve-css-portfolio/css/styles.css
+++ b/steve-css-portfolio/css/styles.css
@@ -2,6 +2,7 @@
 ======================================*/
 body {
 	color:  #343434;
+	margin: 0;
 }
 img {
 	width: 300px;
@@ -11,6 +12,10 @@ a {
 }
 a:hover {
 	text-decoration: none;
+}
+.content-wrap {
+	width: 800px;
+	margin: 0 auto;
 }
 
 /* Profile
